<resources>
    <string name="app_name">Soulmood</string>
    <string name="soulmood">SoulMood</string>
    <string name="soulmoo">SoulMoo</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="license_credit_splash1">bot png from pngtree.com</string>
    <string name="license_credit_splash2_3">mental health png from pngtree.com</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="user_id">User_id</string>
    <string name="male">Laki - Laki</string>
    <string name="female">perempuan</string>
    <string name="enter_your_name">Masukkan Nama Anda</string>
    <string name="enter_your_email">Masukkan Email Anda</string>
    <string name="enter_your_pass">Masukkan Password Anda</string>
    <string name="choose_your_gender">Pilih Jenis Kelamin Anda</string>
    <string name="enter_new_room">Masukkan Nama Ruang…</string>
    <string name="create_new_room">Buat Ruang Baru</string>
    <string name="room_id">room_id</string>
    <string name="room_name">room_name</string>
    <string name="masuk">Masuk</string>

    <string name="dialy_motivation">Motivasi Harian</string>
    <string name="profil">Profil</string>
    <string name="home">Beranda</string>
    <string name="iv_profile_btmappbar">iv_profile_btmappbar</string>
    <string name="iv_home_btmappbar">iv_home_btmappbar</string>
    <string name="fab_chatbot">fab_chatbot</string>


    <string name="grade">Nilai</string>
    <string name="certificate">Sertifikat</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="password">Kata Sandi</string>
    <string name="log_out">Keluar</string>

    <string name="logout_message_alert">Keluar dari akun ini ?</string>
    <string name="cancel">Batal</string>
    <string name="yes">Ya</string>

    <string name="signature">Tanda Tangan / Paraf</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_input_room_name_empty">Nama Ruang tidak boleh kosong.</string>
    <string name="fab_add_room_name">fab_add_room_name</string>
    <string name="iv_topper">iv_topper</string>
    <string name="ic_password">ic_password</string>
    <string name="ic_log_out">ic_logout</string>
    <string name="ic_identity_edit">ic_identity_edit</string>
    <string name="private_information">Informasi Pribadi</string>


    <string name="success">Berhasil</string>
    <string name="error">Gagal</string>
    <string name="changepassword_failed_message">Maaf, Kata Sandi Lama Anda Salah.</string>
    <string name="input_old_password">Kata Sandi Lama tidak boleh kosong!</string>
    <string name="input_new_password">Kata Sandi Baru tidak boleh kosong!</string>
    <string name="input_name">Masukkan Nama disini…</string>
    <string name="input_email">Masukkan Emailmu (email valid untuk verifikasi data) </string>
    <string name="input_confirm_new_password">Ulangi Kata Sandi Baru!</string>
    <string name="old_password">Kata Sandi Saat Ini</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="confirm_new_password">Konfirmasi Kata Sandi Baru</string>
    <string name="sorry_confirm_password_wrong">Maaf, Pengulangan Kata Sandi Baru tidak sama</string>
    <string name="change">ubah</string>
    <string name="message_forgot_pass_email">Kami telah mengirim link ubah password pada Email Anda</string>
    <string name="save">simpan</string>
    <string name="privacy_information">Informasi Pribadi</string>
    <string name="change_password_succes">Password Berhasil Diubah</string>
    <string name="changeProfileSuccess">Informasi Pribadi Diperbarui</string>
    <string name="coming_soon_feature">Fitur Mendatang</string>
    <string name="my_friend">Teman Curhatku</string>
    <string name="iv_psikolog_konsultasi_soulmood">iv_psikolog_konsultasi_soulmood</string>
    <string name="iv_soulcare">iv_soulcare</string>
    <string name="iv_soulmood_chat_kuy">iv_soulmood_chat_kuy</string>
    <string name="quote_motivation">Kata Motivasimu</string>
    <string name="iv_coming_soon_feature">iv_coming_soon_feature</string>
    <string name="forgot_password">Lupa Kata Sandi ?</string>
    <string name="register">Daftar</string>
    <string name="not_having_account">Belum punya akun?</string>
    <string name="account_validation">Validasi Akun</string>
    <string name="send">kirim</string>
    <string name="invalid_password_message">Kata sandi yang diberikan tidak valid. [Kata sandi harus terdiri dari setidaknya 6 karakter]</string>

    <string name="your_mood_recap">Rekapan Mood Anda</string>
    <string name="add">Tambah</string>
    <string name="others">Lainnya</string>

    <string name="coming_soon">Segera tersedia pada Soulmood versi terbaru.</string>
    <string name="enter_message_hint">Masukkan Pesan Anda…</string>
    <string name="room_added">Ruang Berhasil ditambah</string>
    <string name="loading">Loading…</string>
    <string name="dummy_date">Mei 2021</string>
    <string name="happy">Bahagia</string>
    <string name="wrong_password">Maaf, kata sandi yang dimasukkan salah.</string>
    <string name="wrong_email_login">Email yang Anda masukkan belum terdaftar.</string>
    <string name="wrong_email_input_format">Harap masukkan email yang benar.</string>
    <string name="motivation_word_notavailable">Maaf, Kata Motivasi Sedang tidak tersedia!</string>
    <string name="no_internet_connection">Maaf, Saat ini Anda Tidak memiliki Koneksi Internet</string>
    <string name="email_used">Email ini telah digunakan oleh akun lain.</string>
    <string name="ceritakan_masalah_anda">Ceritakan Masalah Anda</string>
    <string name="beban_terasa_lebih_ringan_dengan_menceritakan_masalah_anda">Beban terasa lebih ringan dengan menceritakan masalah anda.</string>

</resources>