<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/forfragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:layout_above="@+id/ll"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/high_of_bottom_navigation"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/soulmood_primary_color"
            app:fabAlignmentMode="center"
            app:fabCradleRoundedCornerRadius="@dimen/round_fab_corner">

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_chatbot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/soulmood_chat"
            app:elevation="5dp"
            app:backgroundTintMode="add"
            app:backgroundTint="@color/white"
            app:fabCustomSize="@dimen/fab_size"
            app:layout_anchor="@id/bottomAppBar"
            app:maxImageSize="55dp"
            android:contentDescription="@string/fab_chatbot" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/jarakIconBN_dariBottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBN_home"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightIconBN"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:padding="@dimen/small_padding"
                android:src="@drawable/home_icon"
                android:contentDescription="@string/iv_home_btmappbar"
                app:tint="@color/white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1.5"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/ivBN_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightIconBN"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:src="@drawable/ic_profil"
                android:contentDescription="@string/iv_profile_btmappbar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvBN_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/home"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1.5"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvBN_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/profil"
                android:gravity="center"
                android:textColor="@color/grey"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>