<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_big"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/card_corner_def">
   <LinearLayout
       android:padding="@dimen/padding_big"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

        <TextView
            android:textSize="@dimen/ts_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_validation"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_semibold"/>

       <TextView
            android:textSize="@dimen/ts_mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Demi keamanan akun, Harap masukkan kembali kata sandi akun Anda"
            android:textColor="@color/black"
            android:textAlignment="center"
            />


       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/tf_password_validation"
           android:layout_width="match_parent"
           android:layout_marginTop="@dimen/margin_def"
           android:layout_height="wrap_content"
           app:boxStrokeWidth="0dp"
           app:boxStrokeWidthFocused="0dp"
           app:passwordToggleEnabled="true">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/et_password_validation"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:background="@drawable/custom_edittext"
               android:hint="@string/old_password"
               android:inputType="textPassword"
               android:textSize="@dimen/ts_standard" />
       </com.google.android.material.textfield.TextInputLayout>

       <Button
           android:id="@+id/btn_submit_validation"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/margin_def"
           android:background="@drawable/ripple_btn_primary"
           android:text="@string/send"
           android:layout_marginEnd="@dimen/margin_def"
           android:layout_marginStart="@dimen/margin_def"
           android:layout_marginBottom="@dimen/dp_1"
           />
   </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

