<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/register_login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/soulmood_logo"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="SoulMood"
            android:textAlignment="center"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_45"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="@dimen/small_margin"
            android:elevation="@dimen/dp_2"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="@dimen/dp_8" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_45"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/small_margin"
            android:elevation="@dimen/dp_2"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/dp_8" />

        <ImageView
            android:id="@+id/iv_eye_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="-35dp"

            android:layout_marginEnd="52dp"
            android:elevation="3dp"
            android:src="@drawable/ic_baseline_visibility_24" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/dp_45"
            android:text="Lupa Kata Sandi?"
            android:textAlignment="textEnd"
            android:textColor="#042481"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_45"
            android:layout_marginTop="40dp"
            android:layout_marginRight="@dimen/dp_45"
            android:background="@drawable/ripple_btn_primary"
            android:text="@string/masuk" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="15dp"
                android:text="Belum punya akun?"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="15dp"
                android:text="Daftar"
                android:textColor="@color/soulmood_primary_color"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>